<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDemos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="start_service">启动服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解除绑定服务</string>
    <string name="stop_service">停止服务</string>
    <string name="boot_up_start_service">开机启动服务</string>
    <string name="cancel_boot_up_start_service">取消开机启动服务</string>
    
    
    <string name="reg_receiver">动态注册接收器</string>
    <string name="unreg_receiver">解注册接收器</string>
    
    
    
    
    <!-- 滑动返回相关 -->
    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>
    
    
<!--     netty_telnet -->
    <string name="netty_telnet_send_message_button_str">发送消息</string>
    <string name="start_push_button_text">start push service</string>
    
    
    
    
    
    <string name="custom_ui">自定义ui</string>
    <string name="layout">布局</string>
    <string name="scroll_activity">滑动返回activity</string>
    <string name="scroll_activity2">滑动返回activity2</string>
    <string name="view_pager_activity">滑动控件</string>
    <string name="system">系统</string>
    <string name="time">时间相关</string>   
    <string name="picture">图片相关</string>
    <string name="net">网络</string>
    <string name="other">其他測試</string>

    
    <string name="layout">布局测试</string>
    <string name="residemenu">仿qq滑动菜单</string>
    <string name="pull_to_refresh">下拉刷新和通用适配</string>
    <string name="service">服务测试</string>
    <string name="use_alarm_manage">alarm定时器</string>
    <string name="receiver_reg">动态注册接收器</string>
    
    <string name="picture_eidt">图片编辑</string>
    
    <string name="netty_telnet">netty_telnet</string>
    <string name="netty_push">netty_推送/心跳</string>
    <string name="netty_chat">netty_chat</string>
    <string name="net_download">下载队列</string>
    <string name="download_add_download">添加下载</string>

    
    
    <string name="common_test">通用测试</string>
</resources>
